# RudyEngine

./: .gitignore  .gitmodules  CMakeFunctions.txt  CMakeLists.txt  README.md  main.cpp
demo/spaceship/: CameraController.cpp  MarkerController.cpp  MarkerController.h  MoveBehaviour.cpp  MoveBehaviour.h  RotationBehaviour.cpp  RotationBehaviour.h  main.cpp
demo/spaceship/assets/: crosshair.dds  marker.dds
demo/spaceship/assets/Skyboxes/mp_drakeq/: create_dds.bat  drakeq_bk.DDS  drakeq_dn.dds  drakeq_ft.dds  drakeq_lf.dds  drakeq_rt.dds  drakeq_up.dds
demo/spaceship/assets/Skyboxes/mp_vr/: VirgoCluster.nfo  cubemapfile.lst
demo/spaceship/shaders/: Diffuse_Fragment.glsl  Diffuse_Vertex.glsl  Fragment.glsl  Overlay_Vertex.glsl  ParticleBIllboard_Vertex.glsl  ParticleBillboard_Fragment.glsl  ScreenFX_Fragment.glsl  ScreenFX_Vertex.glsl  Skybox_Fragment.glsl  Skybox_Vertex.glsl
engine/: Application.cpp  Application.h  CMakeLists.txt  Engine.cpp  Engine.hpp  main.cpp  rudymath.cpp  rudymath.hpp
engine/BasicShaders/: Fragment.glsl  Vertex.glsl
engine/Model/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  ModelLoader.cpp  ModelLoader.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h  VertexData.cpp  VertexData.h
engine/ParticleSystem/: Particle.cpp  Particle.h  ParticleSystem.cpp  ParticleSystem.h
engine/Rendering/: BaseRenderer.cpp  BaseRenderer.h  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  MeshManager.cpp  MeshManager.h  OverlayRenderer.cpp  OverlayRenderer.h  RenderTexture.cpp  RenderTexture.h  ShaderLoader.cpp  ShaderLoader.h  ShaderProgram.cpp  ShaderProgram.h  SkyboxRenderer.cpp  SkyboxRenderer.h  Sprite.cpp  Sprite.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  TrailRenderer.cpp  TrailRenderer.h  WireframeRenderer.cpp  WireframeRenderer.h  rendering.cpp  rendering.hpp
engine/System/: IOManager.cpp  IOManager.h  Input.cpp  Input.h  Log.cpp  Log.h  Screen.cpp  Screen.h  Time.cpp  Time.h  system.hpp
games/breakout/: BallBehaviour.cpp  BallBehaviour.h  BrickBehaviour.cpp  BrickBehaviour.h  Controller.cpp  Controller.h  PaddleBehaviour.cpp  PaddleBehaviour.h  main.cpp
games/breakout/shaders/: SpriteVertex.glsl
tests/consoleTestFixture/: main.cpp  projection_matrix_tests.h  testfixture.hpp  transform_tests.hpp
tests/renderingTestFixture/: BallBehaviour.cpp  BallBehaviour.h  CameraController.cpp  CameraController.h  main.cpp
tests/renderingTestFixture/shaders/: TrailFragment.glsl  TrailVertex.glsl  Vertex.glsl
tests/renderingTestFixture/sprites/: ball.dds  drakeq_up.dds
